# pc-inventory

./: .gitignore  README.md  package-lock.json  package.json
prisma/: schema.prisma  seed.ts
prisma/migrations/20260224222356_init/: migration.sql
prisma/migrations/20260225034215_add_dynamic_component_fields/: migration.sql
prisma/migrations/20260225034919_structured_spec_fields/: migration.sql
prisma/migrations/20260225040920_add_origen_plataforma/: migration.sql
src-tauri/: Cargo.toml  tauri.conf.json
src/actions/: categorias.ts  clientes.ts  componentes.ts  dashboard.ts  ensambles.ts  garantias.ts  gastos.ts  proveedores.ts  ventas.ts
src/app/: layout.tsx  page.tsx
src/app/api/exportar/: route.ts
src/app/clientes/: clientes-table.tsx  page.tsx
src/app/componentes/: componentes-table.tsx  page.tsx
src/app/componentes/[id]/: page.tsx
src/app/componentes/nuevo/: page.tsx
src/app/ensambles/: ensambles-table.tsx  page.tsx
src/app/ensambles/[id]/: page.tsx
src/app/ensambles/nuevo/: page.tsx
src/app/garantias/: garantias-table.tsx  page.tsx
src/app/gastos/: gastos-table.tsx  page.tsx
src/app/proveedores/: page.tsx  proveedores-table.tsx
src/app/reportes/: page.tsx
src/app/ventas/: page.tsx  ventas-table.tsx
src/app/ventas/[id]/: page.tsx  venta-detalle.tsx
src/components/: garantia-print.tsx  sidebar.tsx  theme-toggle.tsx
src/components/forms/: componente-form.tsx  ensamble-form.tsx  venta-form.tsx
src/components/ui/: checkbox.tsx  dialog.tsx  select.tsx
src/lib/: prisma.ts  utils-app.ts  validations.ts
(+2 files in other folders)
