[package]
name = "pc-inventory"
version = "1.0.0"
description = "Sistema de Inventario y Ventas de PCs"
authors = []
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
